--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </header>
       <aside>
         <div class="px-5 py-[9x]">
-          <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsukyeong2002.github.io%2Fweniv_blog%2F&count_bg=%2379C83D&title_bg=%23555555&icon=buzzfeed.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+          <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?menu=blog.md&url=https%3A%2F%2Fsukyeong2002.github.io%2Fgithub_blog%2F&count_bg=%2379C83D&title_bg=%23555555&icon=buzzfeed.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
           </a>
         </div>
       </aside>
